--- a/com.boinx.mimolive.sdPlugin/pi/index.html
+++ b/com.boinx.mimolive.sdPlugin/pi/index.html
@@ -24,10 +24,12 @@
                 <div class="sdpi-item-label">Action</div>
                 <select class="sdpi-item-value select" id="apicmd" onchange="updateSettings()">
                     <option id="" value=""></option>
-                    <optgroup label="Layers">
+                    <optgroup label="Program/Layers">
 						<option id="setLive" value="setLive">setLive</option>
 						<option id="setOff" value="setOff">setOff</option>
 						<option id="toggleLive" value="toggleLive">toggleLive</option>
+                   	</optgroup>
+			<optgroup label="Layers">
 						<option id="cycleThroughVariants" value="cycleThroughVariants">cycleThroughVariants</option>
                    	</optgroup>
                     <optgroup label="Layer Sets">
