--- a/com.boinx.mimolive.sdPlugin/pi/index.html
+++ b/com.boinx.mimolive.sdPlugin/pi/index.html
@@ -8,20 +8,30 @@
     </head>
     <body>
         <div class="sdpi-wrapper hidden">
-            <div class="sdpi-heading">mimoLive API Endpoint settings</div>
+            <div class="sdpi-heading">mimoLive API Endpoint Settings</div>
             <div class="sdpi-item">
-                <div class="sdpi-item-label">Server</div>
-                <input class="sdpi-item-value" id="apisrv" value="" onchange="updateSettings()" placeholder="http://" style="min-width:100px;" required>
+                <div class="sdpi-item-label">Server URL:</div>
+                <input type="text" class="sdpi-item-value" id="apisrv" 
+                value="http://127.0.0.1:8989" onchange="updateSettings()" placeholder="http://127.0.0.1:8989" style="min-width:100px;" required /> 
+                <button id="setDefault">Set to Default</button>
+                <script>
+                   document.getElementById('setDefault').addEventListener('click', function() {
+    document.getElementById('apisrv').value = 'http://127.0.0.1:8989';
+    updateSettings()
+}); 
+                </script>
+
             </div>
+
             <div class="sdpi-item">
-                <div class="sdpi-item-label">API</div>
+                <div class="sdpi-item-label">API:</div>
 				<select class="sdpi-item-value select" id="apiurlsel" onchange="selectEndpoint()" style="min-width:50px; max-width:75px; margin-right:0px;">
 				<option value=""></option>
 				</select>
                 <input class="sdpi-item-value" id="apiurl" value="" onchange="updateSettings()" placeholder="" style="min-width:100px;" required>              
             </div>
             <div class="sdpi-item">
-                <div class="sdpi-item-label">Action</div>
+                <div class="sdpi-item-label">Action:</div>
                 <select class="sdpi-item-value select" id="apicmd" onchange="updateSettings()">
                     <option id="" value=""></option>
                     <optgroup label="Program/Layers">
